--- a/confs/sroaddiction.nginx.conf
+++ b/confs/sroaddiction.nginx.conf
@@ -9,7 +9,7 @@ upstream wendellpbarreto {
 server {
  
     listen   80;
-    server_name *.wendellpbarreto.com;
+    server_name sroaddiction.wendellpbarreto.com *.sroaddiction.wendellpbarreto.com;
     
     client_max_body_size 4G;
  
